# Raspberry-Pico-Waveshare-ST7789-Physarum

./: CMakeLists.txt  README.md
Physarum/: CMakeLists.txt  colony.c  core_0_main.c  core_0_menu.c  core_1_main.c  physarum.c  pico_binary.c  pico_dma.c  pico_spi.c  random.c  waveshare_gpio.c  waveshare_irq.c  waveshare_st7789.c
Physarum/include/: colony.h  core_0_main.h  core_0_menu.h  core_1_main.h  physarum.h  pico_binary.h  pico_dma.h  pico_spi.h  random.h  st7789_commands.h  waveshare_gpio.h  waveshare_irq.h  waveshare_pins.h  waveshare_st7789.h
